force-app/main/default/objects/Project__c/fields/Calculate__c.field-meta.xml
<CustomField>
    <fullName>Calculate__c</fullName>
    <formula>IF(
  Total_Milestone__c  = 0,
  0,
 (Total_Complete_Milestone__c / Total_Milestone__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Calculate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>