force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
Calculate__c = 0,
&quot;Not Started&quot;,
IF(
ROUND(Calculate__c * 100, 0) = 100,
&quot;Complete&quot;,
&quot;In Progress&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>