force-app/main/default/objects/Project__c/fields/Total_Complete_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Total_Complete_Milestone__c</fullName>
    <label>Total Complete Milestone</label>
    <summaryFilterItems>
        <field>Milestone__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>